Finished Users Index

--- a/public/assets/stylesheets/custom.css
+++ b/public/assets/stylesheets/custom.css
@@ -177,3 +177,11 @@ div.field, div.actions {
     list-style-type: square;
 }
 
+ul.users {
+    margin-top: 1em;
+}
+
+.users li {
+    list-style: none;
+}
+
